unpackaged/main/default/objects/Opportunity/fields/Create_Users__c.field-meta.xml
<CustomField>
    <fullName>Create_Users__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked when sales rep is going to create users for the firm during the direct purchase flow (hidden from layout)</description>
    <label>Create Users</label>
    <type>Checkbox</type>
</CustomField>