unpackaged/main/default/objects/Opportunity/fields/Created_By_Role__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Role__c</fullName>
    <description>PM, IM; Edited: auto</description>
    <formula>CreatedBy.UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created By Role</label>
    <type>Text</type>
</CustomField>