unpackaged/main/default/objects/Opportunity/fields/Created_Date_fx__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_fx__c</fullName>
    <description>For Trend reporting</description>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>CreatedDate</inlineHelpText>
    <label>Created Date (fx)</label>
    <type>Date</type>
</CustomField>