unpackaged/main/default/objects/Opportunity/fields/Created_Day__c.field-meta.xml
<CustomField>
    <fullName>Created_Day__c</fullName>
    <formula>DAY(Created_Date_fx__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>