unpackaged/main/default/objects/Opportunity/fields/Created_Month_2__c.field-meta.xml
<CustomField>
    <fullName>Created_Month_2__c</fullName>
    <formula>CreatedDate-DAY(Datevalue(CreatedDate))+1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Month</label>
    <type>DateTime</type>
</CustomField>