unpackaged/main/default/objects/Opportunity/fields/Created_Time__c.field-meta.xml
<CustomField>
    <fullName>Created_Time__c</fullName>
    <description>PM; R179837; Edited: auto</description>
    <formula>CreatedDate</formula>
    <label>Created Time</label>
    <type>DateTime</type>
</CustomField>