unpackaged/main/default/objects/Opportunity/fields/Created_Year__c.field-meta.xml
<CustomField>
    <fullName>Created_Year__c</fullName>
    <description>PM; Edited: auto</description>
    <formula>YEAR( DATEVALUE( CreatedDate ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>