unpackaged/main/default/objects/Opportunity/fields/Credit_Card_Declined__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Declined__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Auto-checked to TRUE when sales first purchases customer and credit card declines</description>
    <label>Credit Card Declined</label>
    <type>Checkbox</type>
</CustomField>