unpackaged/main/default/objects/Opportunity/fields/Cross_Sell_Base__c.field-meta.xml
<CustomField>
    <fullName>Cross_Sell_Base__c</fullName>
    <description>Stamped via automation when an Opportunity is created based on the brands with Active contracts in the account</description>
    <label>Cross-Sell Base</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Brands</valueSetName>
    </valueSet>
</CustomField>