unpackaged/main/default/objects/Opportunity/fields/Cross_sell_Type__c.field-meta.xml
<CustomField>
    <fullName>Cross_sell_Type__c</fullName>
    <label>Cross-sell Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Cross_sell_Type</valueSetName>
    </valueSet>
</CustomField>