unpackaged/main/default/objects/Opportunity/fields/Current_Day__c.field-meta.xml
<CustomField>
    <fullName>Current_Day__c</fullName>
    <description>Day of current date to be used for trend reporting</description>
    <formula>DAY(TODAY())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>