unpackaged/main/default/objects/Opportunity/fields/Current_Doc_Gen_Workaround__c.field-meta.xml
<CustomField>
    <fullName>Current_Doc_Gen_Workaround__c</fullName>
    <label>Current Doc Gen Workaround</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>