unpackaged/main/default/objects/Opportunity/fields/Current_Intake_Solution__c.field-meta.xml
<CustomField>
    <fullName>Current_Intake_Solution__c</fullName>
    <label>Current Intake Solution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Intake_Solution</valueSetName>
    </valueSet>
</CustomField>