unpackaged/main/default/objects/Opportunity/fields/Current_LPM_Other__c.field-meta.xml
<CustomField>
    <fullName>Current_LPM_Other__c</fullName>
    <label>Current LPM (Other)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>