unpackaged/main/default/objects/Opportunity/fields/Current_LPM_Prohibited__c.field-meta.xml
<CustomField>
    <fullName>Current_LPM_Prohibited__c</fullName>
    <description>Determines if Current LPM contains a partner with a Prohibited selling status. Used in Dynamic Forms.</description>
    <formula>IF(INCLUDES(Current_LPM__c, &quot;Aderant&quot;), &quot;True&quot;, null)&amp;
IF(INCLUDES(Current_LPM__c, &quot;ProLaw&quot;), &quot;True &quot;, null) &amp;
IF(INCLUDES (Current_LPM__c, &quot;Thomson Reuters&quot;), &quot;True &quot;, null)</formula>
    <label>Current LPM Prohibited</label>
    <type>Text</type>
</CustomField>