unpackaged/main/default/objects/Opportunity/fields/Current_User_Role_Name__c.field-meta.xml
<CustomField>
    <fullName>Current_User_Role_Name__c</fullName>
    <description>IM, PM; R176878; Edited: auto</description>
    <formula>$UserRole.Name</formula>
    <label>Current User Role Name</label>
    <type>Text</type>
</CustomField>