unpackaged/main/default/objects/Opportunity/fields/Data_Import_Required__c.field-meta.xml
<CustomField>
    <fullName>Data_Import_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if data import is required for customer (for Onboarding/CS)</description>
    <inlineHelpText>Check if data import is required for customer (for Onboarding/CS)</inlineHelpText>
    <label>Data Import Required</label>
    <type>Checkbox</type>
</CustomField>