unpackaged/main/default/objects/Opportunity/fields/Data_Migration_Needed__c.field-meta.xml
<CustomField>
    <fullName>Data_Migration_Needed__c</fullName>
    <label>Data Migration Needed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>