unpackaged/main/default/objects/Opportunity/fields/Data_Migration_Note__c.field-meta.xml
<CustomField>
    <fullName>Data_Migration_Note__c</fullName>
    <label>Data Migration Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>