unpackaged/main/default/objects/Opportunity/fields/Data_Migration_Sources__c.field-meta.xml
<CustomField>
    <fullName>Data_Migration_Sources__c</fullName>
    <label>Data Migration Sources</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cerenade</fullName>
            </value>
            <value>
                <fullName>Clio</fullName>
            </value>
            <value>
                <fullName>Docketwise</fullName>
            </value>
            <value>
                <fullName>Excel</fullName>
            </value>
            <value>
                <fullName>INS Zoom</fullName>
            </value>
            <value>
                <fullName>Law Logix</fullName>
            </value>
            <value>
                <fullName>LollyLaw</fullName>
            </value>
            <value>
                <fullName>MyCase</fullName>
            </value>
            <value>
                <fullName>MySql</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Practice Panther</fullName>
            </value>
            <value>
                <fullName>Primafacie</fullName>
            </value>
            <value>
                <fullName>Quickbooks</fullName>
            </value>
            <value>
                <fullName>SAP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>