unpackaged/main/default/objects/Opportunity/fields/Data_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Data_Received_Date__c</fullName>
    <inlineHelpText>This is when we receive data and countdown on migration duration begins</inlineHelpText>
    <label>Data Received Date</label>
    <type>Date</type>
</CustomField>