unpackaged/main/default/objects/Opportunity/fields/Data_Transfer_Description__c.field-meta.xml
<CustomField>
    <fullName>Data_Transfer_Description__c</fullName>
    <label>Data Transfer Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>