unpackaged/main/default/objects/Opportunity/fields/Date_of_Last_Inbound_Email__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Last_Inbound_Email__c</fullName>
    <label>Date of Last Inbound Email</label>
    <type>Date</type>
</CustomField>