unpackaged/main/default/objects/Opportunity/fields/Date_of_Last_Phone_Touch__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Last_Phone_Touch__c</fullName>
    <label>Date of Last Phone Touch</label>
    <type>Date</type>
</CustomField>