unpackaged/main/default/objects/Opportunity/fields/Days_from_MQL_to_Opp_Close__c.field-meta.xml
<CustomField>
    <fullName>Days_from_MQL_to_Opp_Close__c</fullName>
    <description>PM, IM, MC; R152245</description>
    <formula>CloseDate -  DATEVALUE(Primary_Marketing_Contact__r.Most_Recent_MQL_Before_Opp_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days From MQL To Opp Close</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>