unpackaged/main/default/objects/Opportunity/fields/Days_from_Original_MQL_to_Opp_Close__c.field-meta.xml
<CustomField>
    <fullName>Days_from_Original_MQL_to_Opp_Close__c</fullName>
    <description>PM, IM, MC</description>
    <formula>CloseDate -  datevalue(Primary_Marketing_Contact__r.Original_MQL_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days From Original MQL To Opp Close</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>