unpackaged/main/default/objects/Opportunity/fields/Days_In_Data_Migration__c.field-meta.xml
<CustomField>
    <fullName>Days_In_Data_Migration__c</fullName>
    <formula>Migration_completed_date__c -  Data_Received_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Migration completed date - Data Received Date (result in number of days)</inlineHelpText>
    <label>Days In Data Migration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>