unpackaged/main/default/objects/Opportunity/fields/Days_in_Trial__c.field-meta.xml
<CustomField>
    <fullName>Days_in_Trial__c</fullName>
    <description>MC; R165289, R166193</description>
    <formula>IF ( IsClosed = True, Trial_End_Date__c - (Account.Sign_Up_Date__c) , Today() - (Account.Sign_Up_Date__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days in Trial</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>