unpackaged/main/default/objects/Opportunity/fields/Days_SQL_to_Won__c.field-meta.xml
<CustomField>
    <fullName>Days_SQL_to_Won__c</fullName>
    <formula>IF(
    IsWon = TRUE,
    CloseDate - DATEVALUE(CreatedDate),
    NULL
)</formula>
    <label>Days SQL to Won</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>