unpackaged/main/default/objects/Opportunity/fields/Decision_Maker_s_and_role_at_firm__c.field-meta.xml
<CustomField>
    <fullName>Decision_Maker_s_and_role_at_firm__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Decision Maker(s) and role at firm</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>$Source.AccountId</field>
            <operation>equals</operation>
            <valueField>Contact.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Decision Maker(s) and role at firm)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>