unpackaged/main/default/objects/Opportunity/fields/Decision_Making_Stage_Date__c.field-meta.xml
<CustomField>
    <fullName>Decision_Making_Stage_Date__c</fullName>
    <description>Date Opportunity was moved to Decision Making</description>
    <label>Decision Making Stage Date</label>
    <type>Date</type>
</CustomField>