unpackaged/main/default/objects/Opportunity/fields/Decision_Process__c.field-meta.xml
<CustomField>
    <fullName>Decision_Process__c</fullName>
    <description>To document prospect evaluation/decision making process</description>
    <inlineHelpText>To document prospect evaluation/decision making process</inlineHelpText>
    <label>Decision Process</label>
    <type>TextArea</type>
</CustomField>