unpackaged/main/default/objects/Opportunity/fields/Demo_1_Completed__c.field-meta.xml
<CustomField>
    <fullName>Demo_1_Completed__c</fullName>
    <description>Used by Soluno</description>
    <label>Demo 1 Completed</label>
    <type>Date</type>
</CustomField>