unpackaged/main/default/objects/Opportunity/fields/Demo_2_Completed__c.field-meta.xml
<CustomField>
    <fullName>Demo_2_Completed__c</fullName>
    <description>Used by Soluno</description>
    <label>Demo 2 Completed</label>
    <type>Date</type>
</CustomField>