unpackaged/main/default/objects/Opportunity/fields/Demo_3_Completed__c.field-meta.xml
<CustomField>
    <fullName>Demo_3_Completed__c</fullName>
    <description>used by Soluno</description>
    <label>Demo 3 Completed</label>
    <type>Date</type>
</CustomField>