unpackaged/main/default/objects/Opportunity/fields/Demo_Notes__c.field-meta.xml
<CustomField>
    <fullName>Demo_Notes__c</fullName>
    <description>MC; R165465, R1916754; Edited: Users</description>
    <label>Demo Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>