unpackaged/main/default/objects/Opportunity/fields/Demo_Notes_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Demo_Notes_Date_Time__c</fullName>
    <description>MC; R165465; Edited: Users</description>
    <label>Demo Notes Date/Time</label>
    <type>DateTime</type>
</CustomField>