unpackaged/main/default/objects/Opportunity/fields/Demo_Scheduled_For__c.field-meta.xml
<CustomField>
    <fullName>Demo_Scheduled_For__c</fullName>
    <description>MC; R165465; Edited: Users</description>
    <label>zzDemo Scheduled For</label>
    <type>Date</type>
</CustomField>