unpackaged/main/default/objects/Opportunity/fields/Demo_Stage_Date__c.field-meta.xml
<CustomField>
    <fullName>Demo_Stage_Date__c</fullName>
    <description>Date Opportunity was moved to Demo</description>
    <label>Demo Stage Date</label>
    <type>Date</type>
</CustomField>