unpackaged/main/default/objects/Opportunity/fields/Demo_Status__c.field-meta.xml
<CustomField>
    <fullName>Demo_Status__c</fullName>
    <label>Demo Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Demo_Statuses</valueSetName>
    </valueSet>
</CustomField>