unpackaged/main/default/objects/Opportunity/fields/Direct_Purchase__c.field-meta.xml
<CustomField>
    <fullName>Direct_Purchase__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, opportunity was executed using the Direct Purchase flow</description>
    <label>Direct Purchase</label>
    <type>Checkbox</type>
</CustomField>