unpackaged/main/default/objects/Opportunity/fields/Direct_Purchase_Activation_Link__c.field-meta.xml
<CustomField>
    <fullName>Direct_Purchase_Activation_Link__c</fullName>
    <description>Populated from Workato with the Direct Purchase activation link if requested by sales</description>
    <label>Direct Purchase Activation Link</label>
    <type>Url</type>
</CustomField>