unpackaged/main/default/objects/Opportunity/fields/Direct_Purchase_User_Commit__c.field-meta.xml
<CustomField>
    <fullName>Direct_Purchase_User_Commit__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of users committed for the direct purchase process</description>
    <inlineHelpText>Number of users committed for the direct purchase process</inlineHelpText>
    <label>Direct Purchase User Commit</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>