unpackaged/main/default/objects/Opportunity/fields/Discounted_Total__c.field-meta.xml
<CustomField>
    <fullName>Discounted_Total__c</fullName>
    <label>Discounted Total</label>
    <summarizedField>Opportunity_SKU__c.Discounted_Total__c</summarizedField>
    <summaryForeignKey>Opportunity_SKU__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>