unpackaged/main/default/objects/Opportunity/fields/Discounting_Referral_Partnership__c.field-meta.xml
<CustomField>
    <fullName>Discounting_Referral_Partnership__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Used to identify the partnership from which discounts should apply for product picking and promo discount purposes.</inlineHelpText>
    <label>Discounting Referral Partnership</label>
    <referenceTo>Partnerships__c</referenceTo>
    <relationshipLabel>Opportunities (Discounting Referral Partnership)</relationshipLabel>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>