unpackaged/main/default/objects/Opportunity/fields/Discovery_Stage_Date__c.field-meta.xml
<CustomField>
    <fullName>Discovery_Stage_Date__c</fullName>
    <description>Date Opportunity was moved to Discovery</description>
    <label>Discovery Stage Date</label>
    <type>Date</type>
</CustomField>