unpackaged/main/default/objects/Opportunity/fields/Doc_Migration_Plan_Details__c.field-meta.xml
<CustomField>
    <fullName>Doc_Migration_Plan_Details__c</fullName>
    <inlineHelpText>Required when Doc Migration Plan Discussed? = Yes</inlineHelpText>
    <label>Doc Migration Plan Details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>