unpackaged/main/default/objects/Opportunity/fields/Doc_Migration_Validated__c.field-meta.xml
<CustomField>
    <fullName>Doc_Migration_Validated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to TRUE through automation if doc migration details completed by sales rep for onboarding</description>
    <label>Doc Migration Validated</label>
    <type>Checkbox</type>
</CustomField>