unpackaged/main/default/objects/Opportunity/fields/Docketwise_Subscription_Email__c.field-meta.xml
<CustomField>
    <fullName>Docketwise_Subscription_Email__c</fullName>
    <description>The customer&#39;s email address that receives Docketwise subscription invoices.  This will be used to match Salesforce Opportunities to Stripe subscriptions.</description>
    <label>Docketwise Subscription Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>