unpackaged/main/default/objects/Opportunity/fields/Established_Payment_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Established_Payment_Frequency__c</fullName>
    <inlineHelpText>Used by woodpecker to identify a previously established payment frequency with Newco existing licensing.</inlineHelpText>
    <label>Established Payment Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
                <default>true</default>
                <label>Monthly</label>
            </value>
            <value>
                <fullName>Annually</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>