unpackaged/main/default/objects/Opportunity/fields/Estimated_Hours_ADA__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Hours_ADA__c</fullName>
    <description>Total Estimated Hours as entered on the Qty for the ADA SKU</description>
    <label>Estimated Hours ADA</label>
    <summarizedField>Opportunity_SKU__c.Qty__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity_SKU__c.Name</field>
        <operation>equals</operation>
        <value>Advanced Document Automation</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity_SKU__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>