unpackaged/main/default/objects/Opportunity/fields/Evaluate_Contact_Status__c.field-meta.xml
<CustomField>
    <fullName>Evaluate_Contact_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checking this box will initiate a process to evaluate Contact Status of the contact(s) associated to this record</inlineHelpText>
    <label>Evaluate Contact Status</label>
    <type>Checkbox</type>
</CustomField>