unpackaged/main/default/objects/Opportunity/fields/Expected_Commissioned_ARR__c.field-meta.xml
<CustomField>
    <fullName>Expected_Commissioned_ARR__c</fullName>
    <description>This is used to forecast quota attainment. It includes sales discounts normalized to an annual value and excludes company promotions. Commissioned ARR is multiplied by the Probability to get the expected value.</description>
    <formula>Commissioned_ARR__c  * Probability</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Commissioned ARR x Probability</inlineHelpText>
    <label>Expected Commissioned ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>