unpackaged/main/default/objects/Opportunity/fields/Expected_MRR__c.field-meta.xml
<CustomField>
    <fullName>Expected_MRR__c</fullName>
    <formula>MRR__c * Probability</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>MRR x Probability</inlineHelpText>
    <label>Expected MRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>