unpackaged/main/default/objects/Opportunity/fields/Expected_Short_Term_ARR__c.field-meta.xml
<CustomField>
    <fullName>Expected_Short_Term_ARR__c</fullName>
    <label>Expected Short-Term ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>