unpackaged/main/default/objects/Opportunity/fields/Firm_ID__c.field-meta.xml
<CustomField>
    <fullName>Firm_ID__c</fullName>
    <description>Firm ID of the environment linked to the opportunity</description>
    <formula>Product_Environment__r.Firm_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Firm ID</label>
    <type>Text</type>
</CustomField>