unpackaged/main/default/objects/Opportunity/fields/Firm_Trial_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Firm_Trial_Expiration__c</fullName>
    <formula>Product_Environment__r.Trial_Expiration__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Firm Trial Expiration</label>
    <type>Date</type>
</CustomField>