unpackaged/main/default/objects/Opportunity/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <description>First name of person starting trial for trials created from SFDC</description>
    <label>First Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>