unpackaged/main/default/objects/Opportunity/fields/First_Purchase_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Purchase_Date__c</fullName>
    <description>Set via first purchase flow and hidden on layout -- date sales first purchases firm</description>
    <label>First Purchase Date</label>
    <type>Date</type>
</CustomField>