unpackaged/main/default/objects/Opportunity/fields/First_Sales_Activity__c.field-meta.xml
<CustomField>
    <fullName>First_Sales_Activity__c</fullName>
    <description>Captures the date of the first sales activity against the opportunity</description>
    <label>First Sales Activity</label>
    <type>DateTime</type>
</CustomField>