unpackaged/main/default/objects/Opportunity/fields/Fiscal_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Quarter__c</fullName>
    <description>Fiscal Quarter of Close Date on Opportunity</description>
    <formula>IF(MONTH(CloseDate) &gt;= 10,&#39;Q4&#39;,
IF(MONTH(CloseDate) &gt;= 7,&#39;Q3&#39;,
IF(MONTH(CloseDate) &gt;= 4,&#39;Q2&#39;,
IF(MONTH(CloseDate) &gt;= 1,&#39;Q1&#39;,
&quot;&quot;))))</formula>
    <label>Fiscal Quarter</label>
    <type>Text</type>
</CustomField>